# PySPARQL-Anything

./: README.md  pyproject.toml  spyrql_anything.py
eswc_demo/queries/: retrieveMelodyData.sparql
kmi_tutorial/showcase-tate/: artwork_data_sample.csv
kmi_tutorial/showcase-tate/queries/: artists-fx.sparql  artists.sparql  arts-and-subjects-list.sparql  arts-and-subjects.sparql  as-is.sparql  classification-medium.sparql  decades.sparql  genres.sparql  join-thumnbails-subjects.sparql  list-thumbnail-urls.sparql  list-thumbnail-urls2.sparql  malevic.sparql  recursive-nesting.sparql  sandbox.sparql  subjects-artworks-count.sparql  subjects-artworks-id.sparql  subjects-artworks-images.sparql  subjects-artworks.sparql  subjects-as-skos 2.sparql  subjects-as-skos.sparql  subjects-hierarchy.sparql  subjects-list.sparql  subjects-one.sparql  text-materials-artists-titles.sparql  time.sparql
src/: pysparql_anything.py  spyrql_anything.py  test.py
src/pysparql.anything/: __init__.py
src/pysparql_anything/: __about__.py  __init__.py  args_handlers.py  cli.py  command.py  config.py  engine.py  invoker.py  parameter_handler.py  parameters.py  pysparql_anything.py  sparql_anything.py  sparql_anything_reflection.py  utilities.py
test/: test-ask.sparql  test.py  test.sparql  unitTest.py
tests/: cli.py  test_api.py  test_handler.py  test_library.py  test_module.py  test_unit.py  unitTest.py
tests/queries/ask/: ex199.rq
