[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysparql_anything"
description = 'The SPARQL Anything Python library.'
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.9"
license = "Apache-2.0"
keywords = [
    "SPARQL",
    "RDF",
    "rdflib",
    "sematic web",
    "knowledge graphs",
    "linked data"
]
authors = [
  {name = "Marco Ratta", email = "marco.ratta@open.ac.uk"},
  {name = "Enrico Daga", email = "enrico.daga@open.ac.uk"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "rdflib == 6.3.1",
    "pyjnius == 1.6.0",
    "requests == 2.28.2",
    "PyGithub == 1.58.1",
    "tqdm == 4.65.0"
]

[project.urls]
Documentation = "https://github.com/SPARQL-Anything/PySPARQL-Anything/blob/main/README.md"
Issues = "https://github.com/SPARQL-Anything/PySPARQL-Anything/issues"
Source = "https://github.com/SPARQL-Anything/PySPARQL-Anything"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/pysparql_anything/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pysparql_anything --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
